project(sort)

add_executable(straight_insert_sort straight_insert_sort.cpp)
add_executable(shell_sort shell_sort.cpp)
add_executable(bubble_sort bubble_sort.cpp)
add_executable(quick_sort quick_sort.cpp)
add_executable(select_sort select_sort.cpp)
add_executable(heap_sort heap_sort.cpp)
add_executable(merge_sort merge_sort.cpp)
add_executable(bucket_sort bucket_sort.cpp)
add_executable(radix_sort radix_sort.cpp)







